# zeno

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmessage  AGENT.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  sdk-rc-artifact.yml  windows-ci.yml
cmake/: ZenoEngineConfig.cmake  ZenoEngineConfigVersion.cmake
crates/zeno_abi/: Cargo.toml
crates/zeno_abi/src/: lib.rs
crates/zeno_core/: Cargo.toml
crates/zeno_core/src/: lib.rs
docs/: 1.0-stability-gate.md  architecture.md  build-guide.md  build.md  c_abi_boundary.md  game_module.md  getting-started.md  index.md  initial_c_api.md  mvp_0_1.md  pre-1.0-maturity-roadmap.md  public-sdk-surface.md  release-checklist.md  release-draft-v0.1.0-rc.1.md  release-notes.md  release-publication-runbook-v0.1.0-rc.1.md  renderer-backend-strategy.md  roadmap.md  sdk-compatibility-policy.md  sdk-guide.md  sdk-layout.md  v1.0.0-readiness-criteria.md  vs2022.md  vscode-cmake.md
docs/api/: assets-input-audio.md  engine-lifecycle.md  index.md  math.md  rendering-2d.md  rendering-3d.md  sdk-overview.md
docs/quality/: ci-and-testing.md
docs/tutorials/: 01-create-empty-project.md  02-build-and-run-sdk-template.md  03-use-2d-input-audio-sample.md  04-use-3d-mesh-sample.md  index.md
engine_core/: Cargo.toml
engine_core/src/: main.rs  runtime.rs
examples/external-game/: CMakeLists.txt  README.md
examples/external-game/src/: main.cpp
goal/docs/reports/: phase-44-report.md  phase-45-report.md  phase-46-report.md  phase-47-report.md  phase-48-report.md  phase-49-report.md  phase-50-report.md  phase-51-report.md  phase-52-report.md  phase-53-report.md  phase-54-report.md  phase-55-report.md  phase-56-report.md  phase-57-report.md  phase-58-report.md  phase-59-report.md  phase-60-report.md  phase-61-report.md
native/: CMakeLists.txt
native/zeno_native/: CMakeLists.txt
native/zeno_native/include/zeno/: zeno_abi.h  zeno_native_backend.h
native/zeno_native/src/: abi_smoke.cpp  audio_smoke.cpp  debug_draw_smoke.cpp  input_smoke.cpp  material_smoke.cpp  mesh_smoke.cpp  native_backend.cpp  native_backend.h  native_backend_c_api.cpp  native_backend_renderer_state_smoke.cpp  native_backend_smoke.cpp  renderer_backend_no_window_smoke.cpp  renderer_backend_smoke.cpp  resize_smoke.cpp  shader_smoke.cpp  texture_smoke.cpp
samples/dynamic_module_cpp/: CMakeLists.txt  README.md
samples/dynamic_module_cpp/src/: bad_version_module.cpp  dynamic_module.cpp  main.cpp  missing_entry_module.cpp
samples/sample_game_cpp/: CMakeLists.txt  README.md
samples/sample_game_cpp/assets/: project.zproj  sample_manifest.txt
samples/sample_game_cpp/assets/scenes/: sample_scene.zscene
samples/sample_game_cpp/assets/shaders/: sample_triangle.hlsl
samples/sample_game_cpp/src/: main.cpp  sample_module.cpp  sample_module.h
samples/sdk_feature_samples_cpp/: CMakeLists.txt  README.md
samples/sdk_feature_samples_cpp/assets/projects/: 2d_input_audio.zproj  3d_mesh.zproj
samples/sdk_feature_samples_cpp/assets/scenes/: 2d_input_audio.zscene  3d_mesh.zscene
samples/sdk_feature_samples_cpp/src/: sample_2d_input_audio.cpp  sample_3d_mesh.cpp
scripts/: build-all.ps1  clean-build.ps1  package-runtime.ps1  package-sdk.ps1  run-dynamic-module-sample.ps1  run-sample.ps1  run-template.ps1  test-all-local.ps1  test-headless.ps1  verify-abi.ps1  verify-all.ps1  verify-external-game.ps1  verify-format.ps1  verify-sdk-package-consumption.ps1
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/zeno/: game_module.hpp  game_module_abi.h  math.hpp  zeno.hpp
sdk/cpp/src/: 2d_smoke.cpp  3d_smoke.cpp  app_failed_init_smoke.cpp  app_smoke.cpp  asset.cpp  asset_smoke.cpp  audio_smoke.cpp  collision_smoke.cpp  diagnostics_smoke.cpp  math.cpp  math_smoke.cpp  scene.cpp  scene_smoke.cpp  sdk_smoke.cpp  serialization.cpp  serialization_smoke.cpp  zeno.cpp
sdk/cpp/testdata/app_failed_init/: project.zproj
sdk/cpp/testdata/scene_serialization/: invalid_scene.zscene  missing_asset_scene.zscene  valid_project.zproj  valid_scene.zscene
templates/cpp_empty/: CMakeLists.txt  README.md
templates/cpp_empty/src/: main.cpp
templates/game-cpp/: CMakeLists.txt  README.md
templates/game-cpp/assets/: project.zproj
templates/game-cpp/assets/scenes/: template_scene.zscene
templates/game-cpp/src/: main.cpp  template_module.cpp  template_module.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  zeno_smoke_tests.cpp
